--- a/css/isaackleinbart.css
+++ b/css/isaackleinbart.css
@@ -519,7 +519,7 @@ html.w-mod-js *[data-ix="fade-in"] {
 
 @font-face {
   font-family: 'RNG';
-  src: url('../fonts/RingsideExtraWide-Medium.woff') format('woff');
+  src: url('../fonts/RNG.woff') format('woff');
   font-weight: 500;
   font-style: normal;
 }
